--- a/index.html
+++ b/index.html
@@ -560,21 +560,21 @@
                     <img src="images/menu_01.JPG" alt="ラクレットチーズ" class="menu-img">
                     <div class="menu-info">
                         <h3 class="menu-title">ラクレットチーズ</h3>
-                        <p class="menu-desc">地元野菜をふんだんに使った、身体に優しい彩り定食。</p>
+                        <p class="menu-desc">説明文を入力</p>
                     </div>
                 </div>
                 <div class="menu-card">
                     <img src="images/menu_02.jpg" alt="ローストビーフのひつまぶし風" class="menu-img">
                     <div class="menu-info">
                         <h3 class="menu-title">ローストビーフのひつまぶし風</h3>
-                        <p class="menu-desc">スパイス香る、しっとりとした優しい甘さの手作りケーキ。</p>
+                        <p class="menu-desc">説明文を入力</p>
                     </div>
                 </div>
                 <div class="menu-card">
                     <img src="images/menu_03.jpg" alt="ラクレットチーズのハンバーグ" class="menu-img">
                     <div class="menu-info">
                         <h3 class="menu-title">ラクレットチーズのハンバーグ</h3>
-                        <p class="menu-desc">注文ごとに豆を挽き、一杯ずつ丁寧に淹れるこだわりの珈琲。</p>
+                        <p class="menu-desc">説明文を入力</p>
                     </div>
                 </div>
             </div>
@@ -813,5 +813,6 @@
         });
     </script>
 </body>
+
 
 </html>
