--- a/index.html
+++ b/index.html
@@ -742,9 +742,9 @@
                         <dt>住所</dt>
                         <dd>福島市町庭坂字清水37</dd>
                         <dt>営業時間</dt>
-                        <dd>11:00 - 18:00 (L.O. 17:30)</dd>
+                        <dd>11:00 - 16:00 (L.O. 15:30)</dd>
                         <dt>定休日</dt>
-                        <dd>水曜日・木曜日</dd>
+                        <dd>月曜日</dd>
                         <dt>駐車場</dt>
                         <dd>あり（5台）</dd>
                     </dl>
@@ -816,3 +816,4 @@
 
 
 </html>
+
